# autd3-cpp-link-remote-twincat

./: .gitmodules  CMakeLists.txt  Makefile.toml  README.md
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  pr.yml  release.yml
examples/: CMakeLists.txt  remote_twincat.cpp
include/: autd3_link_remote_twincat.hpp
include/autd3_link_remote_twincat/: native_methods.hpp  remote_twincat.hpp
include/autd3_link_remote_twincat/native_methods/: autd3-capi-link-remote-twincat.h
tests/: CMakeLists.txt  remote_twincat.cpp
tools/wrapper-generator/: Cargo.toml
tools/wrapper-generator/src/: main.rs
